# uav-localization

./: .gitignore  FLOW.md  LICENSE  README.md  beamforming_result.csv  git upload.md
Acoustic_Camera/: README.md  acoustic.py  acoustic_time.py  beamforming_result_win.csv  record.sh  requirements.txt
Acoustic_Camera/audio/: microphone.py
Sim_ROS2/: sim.md
UMA_16/: UMA_16.ipynb  draw_wave_file.py  frame_cal.py  pyroom_loc_recorded.py  sound_save.py  sound_save_16_ch.py  sound_save_test.py  venv.md
UMA_16/UMA16_ROS/src/: package.xml  setup.py
UMA_16/UMA16_ROS/src/UMA16_ROS/: package.xml  setup.cfg  setup.py
UMA_16/UMA16_ROS/src/mic_reader/mic_reader_node/: mic_reader_node.py
UMA_16/uma16_venv/: pyvenv.cfg
