<?xml version="1.0"?>
<package format="3">
  <name>mic_reader</name>
  <version>0.0.1</version>
  <description>Microphone reader node for UMA-16</description>

  <maintainer email="xuanzhe.wang.sam@outlook.com">sam</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>